--- a/reqs/3.6/requirements-doc.txt
+++ b/reqs/3.6/requirements-doc.txt
@@ -58,6 +58,7 @@ nbformat==5.1.2
 nest-asyncio==1.4.3
 notebook==6.2.0
 numpy==1.19.5
+oset==0.1.3
 packaging==20.8
 pandocfilters==1.4.3
 parso==0.8.1
@@ -95,7 +96,7 @@ sphinx-thebe==0.0.8
 sphinx-togglebutton==0.2.3
 sphinx==3.4.3
 sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-bibtex==2.1.4
+sphinxcontrib-bibtex==1.0.0
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
