--- a/reqs/3.7/requirements-dev.txt
+++ b/reqs/3.7/requirements-dev.txt
@@ -87,6 +87,7 @@ nest-asyncio==1.4.3
 nodeenv==1.5.0
 notebook==6.2.0
 numpy==1.19.5
+oset==0.1.3
 packaging==20.8
 pandocfilters==1.4.3
 parso==0.8.1
@@ -141,7 +142,7 @@ sphinx-thebe==0.0.8
 sphinx-togglebutton==0.2.3
 sphinx==3.4.3
 sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-bibtex==2.1.4
+sphinxcontrib-bibtex==1.0.0
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
