--- a/reqs/3.6/requirements-dev.txt
+++ b/reqs/3.6/requirements-dev.txt
@@ -77,6 +77,7 @@ markupsafe==1.1.1
 matplotlib==3.3.3
 mccabe==0.6.1
 mistune==0.8.4
+mpmath==1.1.0
 mypy-extensions==0.4.3
 mypy==0.790
 myst-nb==0.10.2
@@ -154,16 +155,17 @@ sphinxcontrib-serializinghtml==1.1.4
 sqlalchemy==1.3.22
 stdlib-list==0.8.0
 stevedore==3.3.0
+sympy==1.7.1
 terminado==0.9.2
 testpath==0.4.4
 toml==0.10.2
 tornado==6.1
-tox==3.21.1
+tox==3.21.2
 traitlets==4.3.3
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.2
-virtualenv==20.3.1
+virtualenv==20.4.0
 wcwidth==0.2.5
 webencodings==0.5.1
 wheel==0.36.2
