--- a/reqs/3.6/requirements-doc.txt
+++ b/reqs/3.6/requirements-doc.txt
@@ -49,6 +49,7 @@ markdown-it-py==0.5.8
 markupsafe==1.1.1
 matplotlib==3.3.3
 mistune==0.8.4
+mpmath==1.1.0
 myst-nb==0.10.2
 myst-parser==0.12.10
 nbclient==0.5.1
@@ -103,6 +104,7 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 sqlalchemy==1.3.22
 stdlib-list==0.8.0
+sympy==1.7.1
 terminado==0.9.2
 testpath==0.4.4
 tornado==6.1
