--- a/reqs/3.9/requirements-dev.txt
+++ b/reqs/3.9/requirements-dev.txt
@@ -68,16 +68,17 @@ labels==20.1.0
 latexcodec==2.0.1
 lazy-object-proxy==1.4.3
 livereload==2.6.3
-markdown-it-py==0.5.8
+markdown-it-py==0.6.1
 markupsafe==1.1.1
 matplotlib==3.3.3
 mccabe==0.6.1
+mdit-py-plugins==0.2.4
 mistune==0.8.4
 mpmath==1.1.0
 mypy-extensions==0.4.3
 mypy==0.790
-myst-nb==0.10.2
-myst-parser==0.12.10
+myst-nb==0.11.0
+myst-parser==0.13.2
 nbclassic==0.2.6
 nbclient==0.5.1
 nbconvert==5.6.1
