--- a/reqs/3.7/requirements-doc.txt
+++ b/reqs/3.7/requirements-doc.txt
@@ -11,7 +11,7 @@ attrs==20.3.0
 babel==2.9.0
 backcall==0.2.0
 beautifulsoup4==4.9.3
-bleach==3.2.1
+bleach==3.2.2
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
@@ -44,13 +44,14 @@ jupyter==1.0.0
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 latexcodec==2.0.1
-markdown-it-py==0.5.8
+markdown-it-py==0.6.1
 markupsafe==1.1.1
 matplotlib==3.3.3
+mdit-py-plugins==0.2.4
 mistune==0.8.4
 mpmath==1.1.0
-myst-nb==0.10.2
-myst-parser==0.12.10
+myst-nb==0.11.0
+myst-parser==0.13.1
 nbclient==0.5.1
 nbconvert==5.6.1
 nbdime==2.1.0
