--- a/reqs/3.8/requirements-dev.txt
+++ b/reqs/3.8/requirements-dev.txt
@@ -15,7 +15,7 @@ babel==2.9.0
 backcall==0.2.0
 beautifulsoup4==4.9.3
 black==20.8b1
-bleach==3.2.1
+bleach==3.2.2
 certifi==2020.12.5
 cffi==1.14.4
 cfgv==3.2.0
@@ -68,16 +68,17 @@ labels==20.1.0
 latexcodec==2.0.1
 lazy-object-proxy==1.4.3
 livereload==2.6.3
-markdown-it-py==0.5.8
+markdown-it-py==0.6.1
 markupsafe==1.1.1
 matplotlib==3.3.3
 mccabe==0.6.1
+mdit-py-plugins==0.2.4
 mistune==0.8.4
 mpmath==1.1.0
 mypy-extensions==0.4.3
 mypy==0.790
-myst-nb==0.10.2
-myst-parser==0.12.10
+myst-nb==0.11.0
+myst-parser==0.13.1
 nbclassic==0.2.6
 nbclient==0.5.1
 nbconvert==5.6.1
