--- a/reqs/3.8/requirements-dev.txt
+++ b/reqs/3.8/requirements-dev.txt
@@ -5,10 +5,10 @@
 #    pip-compile --no-annotate --output-file=reqs/3.8/requirements-dev.txt reqs/requirements-dev.in reqs/requirements-doc.in reqs/requirements-sty.in reqs/requirements.in
 #
 alabaster==0.7.12
-anyio==2.1.0
+anyio==2.2.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
-astroid==2.5.0
+astroid==2.5.1
 async-generator==1.10
 attrs==20.3.0
 babel==2.9.0
@@ -36,15 +36,15 @@ flake8-polyfill==1.0.2
 flake8-rst-docstrings==0.0.14
 flake8==3.8.4
 gitdb==4.0.5
-gitpython==3.1.13
+gitpython==3.1.14
 graphviz==0.16
-identify==1.5.14
+identify==1.6.1
 idna==2.10
 imagesize==1.2.0
-importlib-metadata==3.4.0
+importlib-metadata==3.7.0
 ipykernel==5.5.0
 ipython-genutils==0.2.0
-ipython==7.20.0
+ipython==7.21.0
 ipywidgets==7.6.3
 isort==5.7.0
 jedi==0.18.0
@@ -55,13 +55,14 @@ jupyter-cache==0.4.2
 jupyter-client==6.1.11
 jupyter-console==6.2.0
 jupyter-core==4.7.1
-jupyter-server==1.4.0
+jupyter-packaging==0.7.12
+jupyter-server==1.4.1
 jupyter-sphinx==0.3.1
 jupyter==1.0.0
 jupyterlab-code-formatter==1.4.4
 jupyterlab-server==2.3.0
 jupyterlab-widgets==1.0.0
-jupyterlab==3.0.8
+jupyterlab==3.0.9
 kiwisolver==1.3.1
 labels==20.1.0
 latexcodec==2.0.1
@@ -76,10 +77,10 @@ mistune==0.8.4
 mpmath==1.2.1
 mypy-extensions==0.4.3
 mypy==0.812
-myst-nb==0.11.1
+myst-nb==0.12.0
 myst-parser==0.13.5
 nbclassic==0.2.6
-nbclient==0.5.2
+nbclient==0.5.3
 nbconvert==5.6.1
 nbdime==2.1.0
 nbformat==5.1.2
@@ -112,7 +113,7 @@ pydeps==1.9.13
 pydocstyle==5.1.1
 pyflakes==2.2.0
 pygments==2.8.0
-pylint==2.7.0
+pylint==2.7.2
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
@@ -132,7 +133,7 @@ sniffio==1.2.0
 snowballstemmer==2.1.0
 soupsieve==2.2
 sphinx-autobuild==2020.9.1
-sphinx-book-theme==0.0.39
+sphinx-book-theme==0.0.40
 sphinx-copybutton==0.3.1
 sphinx-math-dollar==1.2
 sphinx-panels==0.5.2
