--- a/reqs/3.6/requirements-dev.txt
+++ b/reqs/3.6/requirements-dev.txt
@@ -36,15 +36,15 @@ flake8-bugbear==21.3.2
 flake8-builtins==1.5.3
 flake8-polyfill==1.0.2
 flake8-rst-docstrings==0.0.14
-flake8==3.8.4
+flake8==3.9.0
 gitdb==4.0.5
 gitpython==3.1.14
 graphviz==0.16
-identify==2.1.1
+identify==2.1.3
 idna==2.10
 imagesize==1.2.0
 immutables==0.15
-importlib-metadata==3.7.2
+importlib-metadata==3.7.3
 importlib-resources==3.0.0
 ipykernel==5.5.0
 ipython-genutils==0.2.0
@@ -56,14 +56,14 @@ jinja2==2.11.3
 json5==0.9.5
 jsonschema==3.2.0
 jupyter-cache==0.4.2
-jupyter-client==6.1.11
+jupyter-client==6.1.12
 jupyter-console==6.2.0
 jupyter-core==4.7.1
 jupyter-packaging==0.7.12
 jupyter-server==1.4.1
 jupyter-sphinx==0.3.1
 jupyter==1.0.0
-jupyterlab-code-formatter==1.4.4
+jupyterlab-code-formatter==1.4.5
 jupyterlab-server==2.3.0
 jupyterlab-widgets==1.0.0
 jupyterlab==3.0.10
@@ -97,11 +97,12 @@ packaging==20.9
 pandocfilters==1.4.3
 parso==0.8.1
 pathspec==0.8.1
+pep517==0.10.0
 pep8-naming==0.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pillow==8.1.2
-pip-tools==5.5.0
+pip-tools==6.0.1
 pluggy==0.13.1
 pre-commit==2.11.1
 prometheus-client==0.9.0
@@ -110,12 +111,12 @@ ptyprocess==0.7.0
 py==1.10.0
 pybtex-docutils==1.0.0
 pybtex==0.24.0
-pycodestyle==2.6.0
+pycodestyle==2.7.0
 pycparser==2.20
 pydata-sphinx-theme==0.4.3
 pydeps==1.9.13
 pydocstyle==5.1.1
-pyflakes==2.2.0
+pyflakes==2.3.0
 pygments==2.8.1
 pylint==2.7.2
 pyparsing==2.4.7
@@ -136,8 +137,8 @@ smmap==3.0.5
 sniffio==1.2.0
 snowballstemmer==2.1.0
 soupsieve==2.2
-sphinx-autobuild==2020.9.1
-sphinx-book-theme==0.0.41
+sphinx-autobuild==2021.3.14
+sphinx-book-theme==0.0.42
 sphinx-copybutton==0.3.1
 sphinx-math-dollar==1.2
 sphinx-panels==0.5.2
@@ -154,7 +155,7 @@ sphinxcontrib-serializinghtml==1.1.4
 sqlalchemy==1.3.23
 stdlib-list==0.8.0
 sympy==1.7.1
-terminado==0.9.2
+terminado==0.9.3
 testpath==0.4.4
 toml==0.10.2
 tornado==6.1
@@ -162,7 +163,7 @@ tox==3.23.0
 traitlets==4.3.3
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
-urllib3==1.26.3
+urllib3==1.26.4
 virtualenv==20.4.2
 wcwidth==0.2.5
 webencodings==0.5.1
