--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r reqs/3.7/requirements-sty.txt
           pip install .
-          sudo npm install -g cspell pyright
+          sudo npm install -g pyright
       - name: Perform style checks
         run: pre-commit run -a
-      - name: Check spelling
-        run: cspell --no-progress $(git ls-files)
       - name: Run pyright
         run: pyright
