--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,11 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
+  - repo: https://github.com/ComPWA/mirrors-cspell
+    rev: v5.3.9
+    hooks:
+      - id: cspell
+
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.25.0
     hooks:
