--- a/reqs/requirements-doc.in
+++ b/reqs/requirements-doc.in
@@ -13,5 +13,5 @@ sphinx-math-dollar
 sphinx-panels
 sphinx-thebe
 sphinx-togglebutton
-sphinxcontrib-bibtex >= 2
+sphinxcontrib-bibtex >= 2.2  # bibtex_reference_style
 sympy
