--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,8 +26,10 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/meta
-    rev: 0.0.1
+    rev: 0.0.2
     hooks:
+      - id: fix-first-nbcell
+        args: [--replace]
       - id: fix-nbformat-version
 
   - repo: https://github.com/ComPWA/mirrors-cspell
