--- a/reqs/3.6/requirements-doc.txt
+++ b/reqs/3.6/requirements-doc.txt
@@ -19,18 +19,19 @@ click==7.1.2
 colorama==0.4.4
 cycler==0.10.0
 dataclasses==0.8
-decorator==4.4.2
+decorator==5.0.5
 defusedxml==0.7.1
-docutils==0.16
+docutils==0.17
 entrypoints==0.3
+feynman==2.0.2
 gitdb==4.0.7
 gitpython==3.1.14
 graphviz==0.16
 idna==2.10
 imagesize==1.2.0
-importlib-metadata==3.9.0
+importlib-metadata==3.10.0
 importlib-resources==3.0.0
-ipykernel==5.5.0
+ipykernel==5.5.3
 ipython-genutils==0.2.0
 ipython==7.16.1
 ipywidgets==7.6.3
@@ -57,17 +58,17 @@ myst-parser==0.13.5
 nbclient==0.5.3
 nbconvert==5.6.1
 nbdime==2.1.0
-nbformat==5.1.2
+nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.3.0
 numpy==1.19.5
 packaging==20.9
 pandocfilters==1.4.3
-parso==0.8.1
+parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
-pillow==8.1.2
-prometheus-client==0.9.0
+pillow==8.2.0
+prometheus-client==0.10.0
 prompt-toolkit==3.0.18
 ptyprocess==0.7.0
 pybtex-docutils==1.0.0
@@ -103,9 +104,9 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
-sqlalchemy==1.3.23
+sqlalchemy==1.3.24
 sympy==1.7.1
-terminado==0.9.3
+terminado==0.9.4
 testpath==0.4.4
 tornado==6.1
 traitlets==4.3.3
