--- a/reqs/3.7/requirements-sty.txt
+++ b/reqs/3.7/requirements-sty.txt
@@ -12,43 +12,44 @@ cfgv==3.2.0
 click==7.1.2
 cycler==0.10.0
 distlib==0.3.1
-docutils==0.16
+docutils==0.17
+feynman==2.0.2
 filelock==3.0.12
 flake8-blind-except==0.2.0
-flake8-bugbear==21.3.2
+flake8-bugbear==21.4.3
 flake8-builtins==1.5.3
 flake8-polyfill==1.0.2
 flake8-rst-docstrings==0.0.14
 flake8==3.9.0
 identify==2.2.2
-importlib-metadata==3.9.0
+importlib-metadata==3.10.0
 ipython-genutils==0.2.0
 isort==5.8.0
 jsonschema==3.2.0
 jupyter-core==4.7.1
 kiwisolver==1.3.1
 lazy-object-proxy==1.6.0
-matplotlib==3.4.0
+matplotlib==3.4.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
 mypy==0.812
-nbformat==5.1.2
+nbformat==5.1.3
 nbstripout==0.3.9
 nodeenv==1.5.0
 numpy==1.20.2
 pathspec==0.8.1
 pep8-naming==0.11.1
-pillow==8.1.2
+pillow==8.2.0
 pre-commit==2.11.1
 pycodestyle==2.7.0
 pydocstyle==6.0.0
 pyflakes==2.3.1
-pylint==2.7.2
+pylint==2.7.4
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pyyaml==5.4.1
-regex==2021.3.17
+regex==2021.4.4
 restructuredtext-lint==1.3.2
 six==1.15.0
 snowballstemmer==2.1.0
