--- a/reqs/3.9/requirements.txt
+++ b/reqs/3.9/requirements.txt
@@ -5,10 +5,11 @@
 #    pip-compile --no-annotate --output-file=reqs/3.9/requirements.txt reqs/3.9/requirements.in
 #
 cycler==0.10.0
+feynman==2.0.2
 kiwisolver==1.3.1
-matplotlib==3.4.0
+matplotlib==3.4.1
 numpy==1.20.2
-pillow==8.1.2
+pillow==8.2.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 six==1.15.0
