--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,8 @@ repos:
     rev: 0.0.2
     hooks:
       - id: fix-first-nbcell
-        args: [--replace]
+        args:
+          - --replace
       - id: fix-nbformat-version
 
   - repo: https://github.com/ComPWA/mirrors-cspell
