--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,11 +29,12 @@ repos:
     rev: 0.0.2
     hooks:
       - id: fix-first-nbcell
-        args: [--replace]
+        args:
+          - --replace
       - id: fix-nbformat-version
 
   - repo: https://github.com/ComPWA/mirrors-cspell
-    rev: v5.3.9
+    rev: v5.3.11
     hooks:
       - id: cspell
 
@@ -49,7 +50,7 @@ repos:
         language_version: 12.18.2 # prettier does not specify node correctly
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.126
+    rev: v1.1.128
     hooks:
       - id: pyright
 
