--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -1,6 +1,4 @@
-# cspell:ignore reqs
-
-name: CI
+name: CI-docs
 
 on:
   push:
@@ -26,21 +24,11 @@ jobs:
           sudo apt-get -y install pandoc graphviz
       - name: Build documentation and run notebooks
         working-directory: docs
+        env:
+          EXECUTE_NB: YES
         run: make html
-
-  style:
-    name: Style checks
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v2
+      - uses: actions/upload-artifact@v2
+        if: ${{ always() }}
         with:
-          python-version: 3.7
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r reqs/3.7/requirements-sty.txt
-          pip install .
-      - name: Perform style checks
-        run: pre-commit run -a
+          name: html
+          path: docs/_build/html
