--- a/reqs/3.6/requirements-doc.txt
+++ b/reqs/3.6/requirements-doc.txt
@@ -18,8 +18,8 @@ chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
 cycler==0.10.0
-dataclasses==0.8
-decorator==5.0.5
+dataclasses==0.8 ; python_version < "3.7"
+decorator==5.0.6
 defusedxml==0.7.1
 docutils==0.17
 entrypoints==0.3
@@ -68,7 +68,7 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 pillow==8.2.0
-prometheus-client==0.10.0
+prometheus-client==0.10.1
 prompt-toolkit==3.0.18
 ptyprocess==0.7.0
 pybtex-docutils==1.0.0
