--- a/reqs/3.6/requirements-sty.txt
+++ b/reqs/3.6/requirements-sty.txt
@@ -11,8 +11,8 @@ black==20.8b1
 cfgv==3.2.0
 click==7.1.2
 cycler==0.10.0
-dataclasses==0.8
-decorator==5.0.5
+dataclasses==0.8 ; python_version < "3.7"
+decorator==5.0.6
 distlib==0.3.1
 docutils==0.17
 feynman==2.0.2
@@ -38,12 +38,12 @@ mypy-extensions==0.4.3
 mypy==0.812
 nbformat==5.1.3
 nbstripout==0.3.9
-nodeenv==1.5.0
+nodeenv==1.6.0
 numpy==1.19.5
 pathspec==0.8.1
 pep8-naming==0.11.1
 pillow==8.2.0
-pre-commit==2.11.1
+pre-commit==2.12.0
 pycodestyle==2.7.0
 pydocstyle==6.0.0
 pyflakes==2.3.1
