--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
-  - repo: https://github.com/ComPWA/meta
+  - repo: https://github.com/ComPWA/repo-maintenance
     rev: 0.0.2
     hooks:
       - id: fix-first-nbcell
