--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,9 +18,9 @@ repos:
       - id: end-of-file-fixer
         exclude: >
           (?x)^(
-            cspell.json|
             .*\.bib|
-            .*\.svg
+            .*\.svg|
+            \.cspell\.json
           )$
       - id: mixed-line-ending
       - id: trailing-whitespace
