--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,9 +34,14 @@ repos:
       - id: fix-nbformat-version
 
   - repo: https://github.com/ComPWA/mirrors-cspell
-    rev: v5.3.11
+    rev: v5.3.12
     hooks:
       - id: cspell
+
+  - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
+    rev: 2.3.5
+    hooks:
+      - id: editorconfig-checker
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.27.1
@@ -50,7 +55,7 @@ repos:
         language_version: 12.18.2 # prettier does not specify node correctly
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.128
+    rev: v1.1.130
     hooks:
       - id: pyright
 
