--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,8 +26,9 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.2
+    rev: 0.0.3
     hooks:
+      - id: check-dev-files
       - id: fix-first-nbcell
         args:
           - --replace
@@ -42,6 +43,10 @@ repos:
     rev: 2.3.5
     hooks:
       - id: editorconfig-checker
+        exclude: >
+          (?x)^(
+            .*\.py
+          )$
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.27.1
