--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,7 +42,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.124
+    rev: 0.0.127
     hooks:
       - id: check-dev-files
         args:
@@ -80,7 +80,9 @@ repos:
       - id: editorconfig-checker
         exclude: >
           (?x)^(
-            .*\.py
+            .*\.md|
+            .*\.py|
+            LICENSE
           )$
 
   - repo: https://github.com/pycqa/isort
