--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
-    py,
-    doc,
-    sty,
+  py,
+  doc,
+  sty,
 passenv = PYTHONPATH
 skip_install = True
 skip_missing_interpreters = True
@@ -10,100 +10,132 @@ skipsdist = True
 
 [testenv]
 description =
-    Run all unit tests
+  Run all unit tests
 allowlist_externals =
-    pytest
+  pytest
 passenv =
-    GITHUB_TOKEN
+  GITHUB_REPO
+  GITHUB_TOKEN
 commands =
-    pytest {posargs}
+  pytest {posargs}
 
 [testenv:cov]
 description =
-    Compute test coverage
+  Compute test coverage
 allowlist_externals =
-    pytest
+  pytest
 passenv =
-    GITHUB_TOKEN
+  GITHUB_REPO
+  GITHUB_TOKEN
 commands =
-    pytest {posargs:tests} \
-        --cov-fail-under=90 \
-        --cov-report=html \
-        --cov-report=xml \
-        --cov=pwa_pages
+  pytest {posargs:tests} \
+    --cov-fail-under=90 \
+    --cov-report=html \
+    --cov-report=xml \
+    --cov=pwa_pages
 
 [testenv:doc]
 description =
-    Build documentation through Sphinx
-changedir = docs
+  Build documentation and API through Sphinx
 allowlist_externals =
-    make
+  sphinx-build
 passenv =
-    READTHEDOCS_VERSION
+  EXECUTE_NB
+  GITHUB_REPO
+  GITHUB_TOKEN
+  READTHEDOCS_VERSION
 commands =
-    make html
+  sphinx-build \
+    --color \
+    --keep-going \
+    -TW \
+    -b html \
+    docs/ docs/_build/html
 
 [testenv:doclive]
 description =
-    Set up a server to directly preview changes to the HTML pages
+  Set up a server to directly preview changes to the HTML pages
 allowlist_externals =
-    sphinx-autobuild
+  sphinx-autobuild
 passenv =
-    EXECUTE_NB
-    GITHUB_TOKEN
-    READTHEDOCS_VERSION
-    TERM
+  EXECUTE_NB
+  GITHUB_REPO
+  GITHUB_TOKEN
+  READTHEDOCS_VERSION
+  TERM
 commands =
-    sphinx-autobuild \
-        --watch docs \
-        --re-ignore .*/.ipynb_checkpoints/.* \
-        --re-ignore .*/__pycache__/.* \
-        --re-ignore .*\.gitignore \
-        --re-ignore docs/.*\.csv \
-        --re-ignore docs/.*\.gif \
-        --re-ignore docs/.*\.gv \
-        --re-ignore docs/.*\.inv \
-        --re-ignore docs/.*\.json \
-        --re-ignore docs/.*\.pickle \
-        --re-ignore docs/.*\.png \
-        --re-ignore docs/.*\.svg \
-        --re-ignore docs/.*\.yaml \
-        --re-ignore docs/.*\.yml \
-        --re-ignore docs/_build/.* \
-        --open-browser \
-        docs/ docs/_build/html
+  sphinx-autobuild \
+    --open-browser \
+    --re-ignore .*/.ipynb_checkpoints/.* \
+    --re-ignore .*/__pycache__/.* \
+    --re-ignore .*\.gitignore \
+    --re-ignore docs/.*\.csv \
+    --re-ignore docs/.*\.gif \
+    --re-ignore docs/.*\.gv \
+    --re-ignore docs/.*\.inv \
+    --re-ignore docs/.*\.json \
+    --re-ignore docs/.*\.pickle \
+    --re-ignore docs/.*\.png \
+    --re-ignore docs/.*\.svg \
+    --re-ignore docs/.*\.yaml \
+    --re-ignore docs/.*\.yml \
+    --re-ignore docs/_build/.* \
+    --watch docs \
+    docs/ docs/_build/html
 
 [testenv:docnb]
 description =
-    Build documentation through Sphinx WITH output of Jupyter notebooks
+  Build documentation through Sphinx WITH output of Jupyter notebooks
 passenv =
-    GITHUB_TOKEN
-    READTHEDOCS_VERSION
+  GITHUB_REPO
+  GITHUB_TOKEN
+  READTHEDOCS_VERSION
 setenv =
-    EXECUTE_NB = "yes"
-changedir = docs
+  EXECUTE_NB = "yes"
 allowlist_externals =
-    make
+  sphinx-build
 commands =
-    make html
+  sphinx-build \
+    --color \
+    --keep-going \
+    -TW \
+    -b html \
+    docs/ docs/_build/html
+
+[testenv:jcache]
+description =
+  Inspect Jupyter cache
+allowlist_externals =
+  jcache
+changedir = docs/_build
+commands =
+  jcache {posargs:notebook list}
 
 [testenv:linkcheck]
 description =
-    Check external links in the documentation (requires internet connection)
-changedir = docs
+  Check external links in the documentation (requires internet connection)
+passenv =
+  EXECUTE_NB
+  GITHUB_REPO
+  GITHUB_TOKEN
+  READTHEDOCS_VERSION
 allowlist_externals =
-    make
+  sphinx-build
 commands =
-    make ignore-warnings=1 linkcheck # for margin directive
+  sphinx-build \
+    --color \
+    -T \
+    -b linkcheck \
+    docs/ docs/_build/linkcheck
 
 [testenv:sty]
 description =
-    Perform all linting, formatting, and spelling checks
+  Perform all linting, formatting, and spelling checks
 setenv =
-    SKIP = mypy, pyright
+  SKIP = mypy, pyright
 allowlist_externals =
-    mypy
-    pre-commit
+  mypy
+  pre-commit
 commands =
-    mypy docs src tests # run separately because of potential caching problems
-    pre-commit run {posargs} -a
+  mypy docs src tests # run separately because of potential caching problems
+  pre-commit run {posargs} -a
