--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,27 +1,43 @@
-name-template: PWA Pages $NEXT_PATCH_VERSION
+name-template: Repo Maintenance $NEXT_PATCH_VERSION
 tag-template: $NEXT_PATCH_VERSION
 
-categories:
-  - title: 📖 Theory
-    label: 📖 Theory
-  - title: 📖 Analysis
-    label: 📖 Analysis
-  - title: 📖 Software
-    label: 📖 Software
-  - title: 🔨 Internals
-    labels:
-      - 🖱️ DX
-      - 💡 Feature
-      - ⚠️ Interface
-      - 🔨 Maintenance
+references:
+  - main
+  - epic/*
 
-change-template: "- $TITLE (#$NUMBER)"
+categories:
+  - title: ✨ New features
+    label: 💡 Feature
+  - title: ⚠️ Enhancements and optimizations
+    label: ⚙️ Enhancement
+  - title: ⚠️ API changes
+    label: ⚠️ Interface
+  - title: ⚠️ Changes that may affect behavior
+    label: ❗ Behavior
+  - title: 🐛 Bug fixes
+    label: 🐛 Bug
+  - title: 📝 Documentation
+    label: 📝 Docs
+  - title: 🔨 Maintenance
+    label: 🔨 Maintenance
+  - title: 🖱️ Developer Experience
+    label: 🖱️ DX
+
+change-template: |
+  <details>
+  <summary>$TITLE (#$NUMBER)</summary>
+
+  $BODY
+
+  </details>
+
+replacers:
+  - search: /<summary>([a-z]+!?:\s*)(.*)</summary>/g
+    replace: <summary>$2</summary>
+
 sort-direction: ascending
+
 template: |
   # Release $NEXT_PATCH_VERSION
 
   $CHANGES
-
-  ## Contributors since [$PREVIOUS_TAG](https://github.com/ComPWA/PWA-pages/releases/tag/$PREVIOUS_TAG)
-
-  $CONTRIBUTORS
