--- a/.github/workflows/ci-style.yml
+++ b/.github/workflows/ci-style.yml
@@ -5,10 +5,13 @@ on:
     branches:
       - main
       - epic/*
+      - "[0-9]+.[0-9]+.x"
   pull_request:
     branches:
       - main
       - epic/*
+      - "[0-9]+.[0-9]+.x"
+  workflow_dispatch:
 
 jobs:
   style:
@@ -16,14 +19,21 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v4
+      - uses: actions/cache@v3
         with:
-          python-version: 3.7
+          key: |
+            ${{ github.workflow }}-${{ github.job }}-${{ runner.os }}-${{ hashFiles('.constraints/py3.*.txt', '.pre-commit-config.yaml') }}
+          path: |
+            .mypy_cache/
+            ~/.cache/pip/
+            ~/.cache/pre-commit/
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -c .constraints/py3.7.txt -e .[doc,sty]
+          pip install -c .constraints/py3.8.txt -e .[doc,sty]
       - name: Run non-local pre-commit hooks
         run: |
           pre-commit run flake8 -a --color always
